samples/_failures_safe/1761391920_b8e7e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d4e92b5.c: In function ‘matrix_determinant_recursive’:
./samples/SAFE/__tmp_7d4e92b5.c:130:9: error: expected ‘,’ or ‘;’ at end of input
  130 |         for (int i = 1
      |         ^~~
./samples/SAFE/__tmp_7d4e92b5.c:130:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7d4e92b5.c:130:9: error: expected declaration or statement at end of input
